metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Type of the account associated with this project</description>
    <formula>TEXT(mavenlink__Account__r.Type)</formula>
    <inlineHelpText>Type of the account associated with this project</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>