metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Billable_Hours_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Tracked__c</fullName>
    <description>Total Billable hours tracked per project.</description>
    <inlineHelpText>Total Billable hours tracked per project.</inlineHelpText>
    <label>Billable Hours Tracked</label>
    <summarizedField>mavenlink__Mavenlink_Task__c.mavenlink__Task_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>mavenlink__Mavenlink_Task__c.mavenlink__Task_Budget_Used_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>mavenlink__Mavenlink_Task__c.mavenlink__Task_Status__c</field>
        <operation>equals</operation>
        <value>completed</value>
    </summaryFilterItems>
    <summaryForeignKey>mavenlink__Mavenlink_Task__c.mavenlink__Mavenlink_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>