metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Candidate_for_a_customer_story__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_a_customer_story__c</fullName>
    <label>Candidate for a customer story?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>