metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Client_s_favourite_element_of_product__c.field-meta.xml
<CustomField>
    <fullName>Client_s_favourite_element_of_product__c</fullName>
    <label>Client’s favourite element of product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxonomy</fullName>
            </value>
            <value>
                <fullName>Derivatives</fullName>
            </value>
            <value>
                <fullName>Theming</fullName>
            </value>
            <value>
                <fullName>Custom URL</fullName>
            </value>
            <value>
                <fullName>Permissions/Visibility Restrictions</fullName>
            </value>
            <value>
                <fullName>Waiting Room</fullName>
            </value>
            <value>
                <fullName>Upload screen</fullName>
            </value>
            <value>
                <fullName>Mass uploader</fullName>
            </value>
            <value>
                <fullName>Duplicate Finder</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Dashboard/Homepage</fullName>
            </value>
            <value>
                <fullName>Print Templates</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Guidelines</fullName>
            </value>
            <value>
                <fullName>Media Import</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Digital Templates</fullName>
            </value>
            <value>
                <fullName>VBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>