metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <label>Close date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>