metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Completed_Reserved_Modules_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Completed_Reserved_Modules_Consultation__c</fullName>
    <description>Used for mapping mavenlink project information from Mavenlink</description>
    <label>Completed Reserved Modules Consultation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>