metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Contract_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sign_Date__c</fullName>
    <description>The date when the contract was signed.</description>
    <formula>mavenlink__Opportunity__r.CloseDate</formula>
    <inlineHelpText>The date when the contract was signed.</inlineHelpText>
    <label>Contract Sign Date</label>
    <type>Date</type>
</CustomField>