metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Contracted_One_off__c.field-meta.xml
<CustomField>
    <fullName>Contracted_One_off__c</fullName>
    <description>Contracted One-off from Products, equals Budget</description>
    <formula>mavenlink__Opportunity__r.One_off_from_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contracted One-off from Products, equals Budget</inlineHelpText>
    <label>Contracted One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>