metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Conversion rate of the original contract value to EUR</description>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>