metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner__c</fullName>
    <formula>mavenlink__Account__r.CSM_Owner__r.FirstName &amp; &quot; &quot; &amp; mavenlink__Account__r.CSM_Owner__r.LastName</formula>
    <label>CSM Owner</label>
    <type>Text</type>
</CustomField>