metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Customer_Reference_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Details__c</fullName>
    <description>Additional information regarding yes/no of customer reference</description>
    <label>Customer Reference Details</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>