metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Customer_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stage__c</fullName>
    <description>Current status of the customer.</description>
    <formula>TEXT(mavenlink__Account__r.Customer_Stage__c)</formula>
    <inlineHelpText>Current status of the customer.</inlineHelpText>
    <label>Customer Stage</label>
    <type>Text</type>
</CustomField>