metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Days_in_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Days_in_onboarding__c</fullName>
    <formula>IF(OR(ISPICKVAL(mavenlink__Status__c, &quot;Completed&quot;), ISPICKVAL(mavenlink__Status__c, &quot;Closed&quot;)), PROJECT_SIGN_OFF_DATE__c - KICK_OFF_DATE__c, TODAY() - KICK_OFF_DATE__c)</formula>
    <label>Days in Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>