metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Days_since_Project_Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Project_Kickoff__c</fullName>
    <description>BO-1299: Used to count the total number of days that have passed since the Kickoff Date</description>
    <formula>TODAY() - KICK_OFF_DATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Project Kickoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>