metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Delta_Milestone_weight_complete__c.field-meta.xml
<CustomField>
    <fullName>Delta_Milestone_weight_complete__c</fullName>
    <description>Difference between the value of milestone weight % complete of current month and previous month.</description>
    <formula>IF(Milestone_complete_Prior_Month__c = 100, 0, 
IF(mavenlink__Archived__c = True, null,
Milestone_weight_complete__c - Milestone_complete_Prior_Month__c))</formula>
    <inlineHelpText>Difference between the value of milestone weight % complete of current month and previous month.</inlineHelpText>
    <label>Delta Milestone weight % complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>