metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Did_the_customer_watch_the_webinar__c.field-meta.xml
<CustomField>
    <fullName>Did_the_customer_watch_the_webinar__c</fullName>
    <description>Used in the mavenlink integration and the information is pushed from Mavenlink.</description>
    <label>Did the customer watch the webinar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>