metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Discounted_one_off__c.field-meta.xml
<CustomField>
    <fullName>Discounted_one_off__c</fullName>
    <formula>CASE(mavenlink__Opportunity__r.CurrencyIsoCode,
&quot;USD&quot;,&quot;$&quot;,
&quot;EUR&quot;,&quot;€&quot;,
&quot;GBP&quot;,&quot;£&quot;,
TEXT(mavenlink__Opportunity__r.CurrencyIsoCode)) &amp; TEXT(ROUND(mavenlink__Opportunity__r.One_off_from_Products__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted One-off</label>
    <type>Text</type>
</CustomField>