metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Discounted_One_off_value__c.field-meta.xml
<CustomField>
    <fullName>Discounted_One_off_value__c</fullName>
    <label>Discounted One-off value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>