metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Future_opportunities_for_upsells_expansi__c.field-meta.xml
<CustomField>
    <fullName>Future_opportunities_for_upsells_expansi__c</fullName>
    <label>Future opportunities for upsells</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>