metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/G2_Survey_is_Sent__c.field-meta.xml
<CustomField>
    <fullName>G2_Survey_is_Sent__c</fullName>
    <description>Indicates whether G2 survey was sent or not.</description>
    <label>G2 Survey is Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>