metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Guided_Kick_off_Flow_Used__c.field-meta.xml
<CustomField>
    <fullName>Guided_Kick_off_Flow_Used__c</fullName>
    <description>Used in the mavenlink integration and the information is pushed from Mavenlink.</description>
    <label>Guided Kick-off Flow Used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>