metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Integrations_discussed_implemented__c.field-meta.xml
<CustomField>
    <fullName>Integrations_discussed_implemented__c</fullName>
    <description>Integrations discussed/implemented during onboarding</description>
    <label>Integrations discussed/implemented</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>