metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Invited_to_Portal_Date__c.field-meta.xml
<CustomField>
    <fullName>Invited_to_Portal_Date__c</fullName>
    <description>Used in the mavenlink integration and the information is pushed from Mavenlink.</description>
    <label>Invited to Portal Date</label>
    <type>Date</type>
</CustomField>