metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/KICK_OFF_DATE__c.field-meta.xml
<CustomField>
    <fullName>KICK_OFF_DATE__c</fullName>
    <description>Used as the project startdate of a project</description>
    <label>Kick-off Date</label>
    <type>Date</type>
</CustomField>