metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Link_to_customer_drive_documents__c.field-meta.xml
<CustomField>
    <fullName>Link_to_customer_drive_documents__c</fullName>
    <label>Link to customer drive documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>