metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Main_client_risk_post_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Main_client_risk_post_onboarding__c</fullName>
    <label>Main client risk post-onboarding?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation timeline</fullName>
            </value>
            <value>
                <fullName>Client’s technical understanding</fullName>
            </value>
            <value>
                <fullName>Project lead’s stakeholder management</fullName>
            </value>
            <value>
                <fullName>Too many stakeholders</fullName>
            </value>
            <value>
                <fullName>External project lead</fullName>
            </value>
            <value>
                <fullName>Poorly planned roll-out</fullName>
            </value>
            <value>
                <fullName>Open deliverables</fullName>
            </value>
            <value>
                <fullName>Lack of communication</fullName>
            </value>
            <value>
                <fullName>Overly complex system - lack of autonomy</fullName>
            </value>
            <value>
                <fullName>Admin/Project lead out of touch with business needs</fullName>
            </value>
            <value>
                <fullName>Resourcing issues client-side</fullName>
            </value>
            <value>
                <fullName>Disengaged admin</fullName>
            </value>
            <value>
                <fullName>Core team was not part of sales process</fullName>
            </value>
            <value>
                <fullName>Unrealistic expectations</fullName>
            </value>
            <value>
                <fullName>Support package misalignment</fullName>
            </value>
            <value>
                <fullName>Performance issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>