metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Milestone_complete_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>Milestone_complete_Prior_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Milestone weight % complete as per previous month. Updated every month.</description>
    <inlineHelpText>Milestone weight % complete as per previous month. Updated every month.</inlineHelpText>
    <label>Milestone % complete - Prior Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>