metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/MRR_value__c.field-meta.xml
<CustomField>
    <fullName>MRR_value__c</fullName>
    <label>MRR value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>