metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/MVP_DATE__c.field-meta.xml
<CustomField>
    <fullName>MVP_DATE__c</fullName>
    <description>Date where phase 1 of the project is completed and the customer can start making use of the system</description>
    <label>MVP Date</label>
    <type>Date</type>
</CustomField>