metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Nature_of_relationship__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_relationship__c</fullName>
    <label>Nature of relationship</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>