metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/No_of_emails_questions_asked_during_flow__c.field-meta.xml
<CustomField>
    <fullName>No_of_emails_questions_asked_during_flow__c</fullName>
    <description>Used in the mavenlink integration and the information is pushed from Mavenlink.</description>
    <label>No of emails/questions asked during flow</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>