metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Notes_contacts_other_integrations__c.field-meta.xml
<CustomField>
    <fullName>Notes_contacts_other_integrations__c</fullName>
    <description>Please list any notes, main contacts or integrations that are not yet listed</description>
    <label>Notes, contacts, other integrations</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>