metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Onboarding_Project_Manager_1__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Project_Manager_1__c</fullName>
    <description>Project manager lead as set in Mavenlink</description>
    <inlineHelpText>Project manager lead as set in Mavenlink</inlineHelpText>
    <label>Onboarding Project Manager 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>