metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Onboarding_Specialist_Support__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Specialist_Support__c</fullName>
    <description>BO-1006. Indicates the name of the Onboarding specialist/support. Synced to Mavenlink.</description>
    <label>Onboarding Specialist / Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>