metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Onboarding_Team__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Team__c</fullName>
    <description>Represents the team (onboarding managers) that worked on the project.</description>
    <formula>IF(
AND(ISBLANK(Onboarding_Project_Manager_1__c), ISBLANK(Onboarding_Project_Manager_2__c)), null,
Onboarding_Project_Manager_1__c + &quot;,&quot; + &quot; &quot; + Onboarding_Project_Manager_2__c
)</formula>
    <inlineHelpText>Represents the team (onboarding managers) that worked on the project.</inlineHelpText>
    <label>Onboarding Team</label>
    <type>Text</type>
</CustomField>