metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Open_items_from_project__c.field-meta.xml
<CustomField>
    <fullName>Open_items_from_project__c</fullName>
    <label>Open items from project Old</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derivatives</fullName>
            </value>
            <value>
                <fullName>Theming</fullName>
            </value>
            <value>
                <fullName>Custom URL</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Admin Training</fullName>
            </value>
            <value>
                <fullName>Templates</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Guidelines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>