metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Open_items_from_project_new__c.field-meta.xml
<CustomField>
    <fullName>Open_items_from_project_new__c</fullName>
    <label>Open items from project</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>