metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Opportunity_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_digits__c</fullName>
    <formula>mavenlink__Opportunity__r.Opportunity_ID_18_digits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID (18 digits)</label>
    <type>Text</type>
</CustomField>