metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Returns the type of opportunity.</description>
    <formula>TEXT( mavenlink__Opportunity__r.Type)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>