metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/PLANNED_Project_finish_date_phase_1__c.field-meta.xml
<CustomField>
    <fullName>PLANNED_Project_finish_date_phase_1__c</fullName>
    <formula>/* Deleted this formula and set the value as blank as opportunity is deleted mavenlink__Opportunity__r.PLANNED_Project_Finish_date__c*/

DATEVALUE(&quot;&quot;)</formula>
    <label>PLANNED Project finish date phase 1</label>
    <type>Date</type>
</CustomField>