metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform that is associated with this project</description>
    <formula>mavenlink__Opportunity__r.Platform__c</formula>
    <inlineHelpText>Platform that is associated with this project</inlineHelpText>
    <label>Platform</label>
    <type>Text</type>
</CustomField>