metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Please_elaborate_Future_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Please_elaborate_Future_opportunities__c</fullName>
    <description>Please elaborate future opportunities for upsells/expansions</description>
    <label>Please elaborate</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>