metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Please_elaborate_least_liked_element__c.field-meta.xml
<CustomField>
    <fullName>Please_elaborate_least_liked_element__c</fullName>
    <label>Please elaborate</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>