metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Please_elaborate_main_risk__c.field-meta.xml
<CustomField>
    <fullName>Please_elaborate_main_risk__c</fullName>
    <description>Please elaborate the main risk for this customer post-implementation</description>
    <label>Please elaborate</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>