metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_ID__c</fullName>
    <description>Bynder Portal ID. Filled manually by Onboarding, pushed further to the related account.</description>
    <label>Portal ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>