metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Project_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Project_Backlog__c</fullName>
    <description>Used to calculate the backlog of the project based on the on what milestones still need to be done in Mavenlink.</description>
    <formula>(1-Milestone_weight_complete__c) * mavenlink__Opportunity__r.One_off_from_Products__c</formula>
    <inlineHelpText>(1-Milestone weight complete %) *  one-off</inlineHelpText>
    <label>Project Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>