metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Project_Contracted_Weeks_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Project_Contracted_Weeks_of_Engagement__c</fullName>
    <description>BO-1006. Indicates contracted weeks of engagement. Synced to Mavenlink.</description>
    <label>Project Contracted Weeks of Engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>