metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/Project_Manager_Support_c__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Support_c__c</fullName>
    <description>Project manager support as set in Mavenlink</description>
    <label>Project Manager Support</label>
    <length>156</length>
    <type>Text</type>
</CustomField>