metadata/force-app/main/default/objects/mavenlink__Mavenlink_Project__c/fields/PROJECT_SIGN_OFF_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_SIGN_OFF_DATE__c</fullName>
    <description>Date the full project has been completed</description>
    <label>Project Sign-off Date</label>
    <type>Date</type>
</CustomField>